--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<h1>Hackathon demon for </h1>
+<style>
 
-<ul>
-    <li><a routerLink="/hotel/6">Four Seasons Hotel George V</a></li>
-    <li><a routerLink="/hotel/183">The Savoy</a></li>
-    <li><a routerLink="/hotel/418">Ritz Paris</a></li>
-</ul>
-<!-- <router-outlet></router-outlet> -->
+</style>
+<div class="hackaton">
+    <h3>Hackathon demon for </h3>
+    <ul>
+        <li><a routerLink="/hotel/6">Four Seasons Hotel George V</a></li>
+        <li><a routerLink="/hotel/183">The Savoy</a></li>
+        <li><a routerLink="/hotel/418">Ritz Paris</a></li>
+    </ul>
+</div>
+<router-outlet></router-outlet>
