--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,6 @@
     <meta http-equiv="Content-Language" content="en-GB"/>
     <meta name="description"
           content="Book at the Savoy — Let our « Smooth Journey Experience » amaze you and our L GEMs help you get the most of your stay in London."/>
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <script type="text/javascript">(window.NREUM || (NREUM = {})).loader_config = {xpid: "VQAFVVJWARAGVFhVAgQBVA=="};
     window.NREUM || (NREUM = {}), __nr_require = function (t, n, e) {
@@ -733,8 +732,8 @@
                 <p class="breadcrumbs short">
                     <a href="/hotels/united-kingdom/london?occ=a02">London</a>
                 </p>
-                <h1 class="withBreadcrumbs" *ngIf="loaded">{{ hotel.name }}</h1>
-                {{loaded}}
+                <h1 class="withBreadcrumbs" *ngIf="!!hotel">{{ hotel.name }}</h1>
+                {{ myVar }}
             </div>
 
 
