And I hate musicals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
     <h3>Hackathon demon for </h3>
     <ul>
         <li><a routerLink="/hotel/6">Four Seasons Hotel George V</a></li>
-        <li><a routerLink="/hotel/183">The Savoy</a></li>
-        <li><a routerLink="/hotel/418">Ritz Paris</a></li>
+        <li><a routerLink="/hotel/396">The Savoy</a></li>
+        <li><a routerLink="/hotel/418">One&Only The Palm</a></li>
     </ul>
 </div>
 <router-outlet></router-outlet>
